lib/libremidi-5.4.3/tests/corpus/Invalid/No Header Chunk/coming_to_america.mid
vti_encoding:SR|utf8-nl
vti_timelastmodified:TR|07 Aug 2002 05:22:46 -0000
vti_extenderversion:SR|4.0.2.3712
vti_backlinkinfo:VX|music/coming_to_america.htm
vti_nexttolasttimemodified:TR|27 Jan 2001 17:33:07 -0000
vti_author:SR|lostface
vti_modifiedby:SR|lostface
vti_timecreated:TR|08 Aug 2002 18:26:08 -0000
vti_syncwith_localhost\\c\:\\documents and settings\\ben\\my documents\\my webs\\myweb2/c\:/documents and settings/ben/my documents/my webs/myweb2:TR|07 Aug 2002 05:22:46 -0000
